<resources>
    <string name="app_name">MyManuelNavigation Drawar</string>
    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accueil">Accueil</string>
    <string name="mes_docteurs">mes docteurs</string>
    <string name="mes_medicaments">mes medicaments</string>
    <string name="a_propos">A propos</string>
    <string name="se_deconnecter">se deconnecter</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">180605659393871</string>
    <string name="fb_login_protocol_scheme">fb180605659393871</string>

</resources>
